# ZXAIEC43A

./: .clang-format  .gitignore  CMakeLists.txt  partitions.csv  readme.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/ZXAIEC43A-V12/: qmsd_board.c  qmsd_board.h  qmsd_board_pin.h
components/aiha_server/: CMakeLists.txt
components/aiha_server/include/: aiha_audio_http.h  aiha_http_common.h  aiha_req_ota.h  aiha_websocket.h  cmd_match.h
components/audio_player/: CMakeLists.txt
components/gx8006_protocol/: CMakeLists.txt  gx8006.h  gx8006_protocol.h
components/storage_nvs/: CMakeLists.txt  storage_nvs.c  storage_nvs.h
components/ws2812/: CMakeLists.txt  (+2 more)
main/: CMakeLists.txt  idf_component.yml  led_status.c  main.c
main/chat/: aiha_ai_chat.c  aiha_ai_chat.h  chat_asr_ctrl.c  chat_asr_ctrl.h
main/chat_notify/: chat_notify.c  chat_notify.h  chat_notify_list.c  fs_utils.c  fs_utils.h
main/network/: qmsd_network.c  qmsd_network.h  qmsd_ota.c  qmsd_ota.h
qmsd_esp32_sdk/components/qmsd_network/: CMakeLists.txt
qmsd_esp32_sdk/components/qmsd_network/provisioning/blufi/: blufi_host.c  blufi_security.c  qmsd_blufi_pri.h  qmsd_prov_blufi.c  readme.md
qmsd_esp32_sdk/components/qmsd_network/provisioning/include/: qmsd_prov_blufi.h  qmsd_prov_smartconfig.h  qmsd_prov_softap.h  qmsd_prov_wifi.h
qmsd_esp32_sdk/components/qmsd_network/provisioning/smartconfig/: qmsd_prov_smartconfig.c
qmsd_esp32_sdk/components/qmsd_network/provisioning/softap/: qmsd_prov_softap.c
qmsd_esp32_sdk/components/qmsd_network/wifi/: qmsd_wifi.c  qmsd_wifi_sta.c
qmsd_esp32_sdk/components/qmsd_network/wifi/example/: main.c
qmsd_esp32_sdk/components/qmsd_network/wifi/include/: qmsd_wifi.h  qmsd_wifi_sta.h
(+8 files in other folders)
